################################################################################
#	Name       : Makefile
#	Author     : Didier Barvaux <didier@barvaux.org>
#	Description: create and run the automated robustness tests located in subdirs
################################################################################

SUBDIRS = \
	empty_payload \
	damaged_packet \
	piggybacking_feedback

