################################################################################
#	Name       : Makefile
#	Author     : Didier Barvaux <didier@barvaux.org>
#	Description: create and run the automated robustness tests located in subdirs
################################################################################

SUBDIRS = \
	empty_payload \
	lost_packet \
	damaged_packet \
	piggybacking_feedback

