################################################################################
#	Name       : Makefile
#	Author     : Didier Barvaux <didier@barvaux.org>
#	Description: define some protocols and their headers
################################################################################

noinst_HEADERS = \
	ip_numbers.h \
	ipproto.h \
	ipv4.h \
	ipv6.h \
	udp.h \
	udp_lite.h \
	rtp.h \
	tcp.h \
	esp.h

